infra/k8s/fbi-auth-depl.yaml
# image: us.gcr.io/react-native-stripe-51bc5/fbi-auth
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fbi-auth-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fbi-auth
  template:
    metadata:
      labels:
        app: fbi-auth
    spec:
      containers:
        - name: fbi-auth
          image: bharatrose1/fbi-auth
---
apiVersion: v1
kind: Service
metadata:
  name: fbi-auth-srv
spec:
  selector:
    app: fbi-auth
  ports:
    - name: fbi-auth
      protocol: TCP
      port: 3000
      targetPort: 3000
