infra/k8s/fbi-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fbi-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fbi
  template:
    metadata:
      labels:
        app: fbi
    spec:
      containers:
        - name: fbi
          image: bharatrose1/fbi
---
apiVersion: v1
kind: Service
metadata:
  name: fbi-srv
spec:
  selector:
    app: fbi
  ports:
    - name: fbi
      protocol: TCP
      port: 3000
      targetPort: 3000
